--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <div id="about-container">
             <h2 id="about-text">
-                Hiya. I'm currently a student at the University of Toronto working towards a specialist in computer science.
+                Hiya. I'm currently a student at the University of Toronto working towards a specialist in computer science. Contact me via any of the links below.
             </h2>
         </div>
         
