--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
     </section>
    
-    
+    <!-- ~=~Contact Section~=~ -->
     <section id="contact" class="content-section text-center">
        <h2>contact</h2>
         <img class="img-circle img-responsive self-image" src="img/self.jpg" height="200" width="200">
@@ -198,6 +198,11 @@
                 <a href="mailto:benjqh@gmail.com" class="btn btn-default btn-lg">
                 <i class="fa fa-envelope fa-fw"></i>
                 <span class="network-name"></span>benjqh -@- gmail.com</a>
+            </li>
+            <li>
+                <a href="http://twitter.com/benjqh" class="btn btn-default btn-lg">
+                <i class="fa fa-twitter fa-fw"></i>
+                <span class="network-name">@benjqh</span></a>
             </li>
         </ul>
         <div class="intro-more">
