--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </ul>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="https://github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
+                    <a href="http://github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
                     <i class="fa fa-code fa-fw"></i>
                     <span class="network-name">SynergySpace</span></a>
                 </li>
