--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                         <h1 class="brand-heading">ben hu</h1>
                         <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://github.com/Ben-Hu" class="btn btn-default btn-lg">
+                            <a href="//github.com/Ben-Hu" class="btn btn-default btn-lg">
                             <i class="fa fa-github fa-fw"></i>
                             <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/in/benjhu" class="btn btn-default btn-lg">
+                            <a href="//linkedin.com/in/benjhu" class="btn btn-default btn-lg">
                             <i class="fa fa-linkedin-square fa-fw"></i>
                             <span class="network-name"></span>Linkedin</a>
                         </li>
@@ -107,31 +107,31 @@
             </div>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="https://c-programming.onlinelearning.utoronto.ca/index.shtml" class="btn btn-default btn-lg">
+                    <a href="//c-programming.onlinelearning.utoronto.ca/index.shtml" class="btn btn-default btn-lg">
                     <i class="fa fa-play-circle-o fa-fw"></i>
                     <span class="network-name">CSC209 Educational Content</span></a>
                 </li>
                 <li>
-                    <a href="https://mcs.utm.utoronto.ca/~pcrs/computer_org/index.shtml" class="btn btn-default btn-lg">
+                    <a href="//mcs.utm.utoronto.ca/~pcrs/computer_org/index.shtml" class="btn btn-default btn-lg">
                     <i class="fa fa-video-camera  fa-fw"></i>
                     <span class="network-name">CSC258 Educational Content</span></a>
                 </li>
             </ul>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="http://github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
+                    <a href="//github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
                     <i class="fa fa-code fa-fw"></i>
                     <span class="network-name">SynergySpace</span></a>
                 </li>
                 <li>
-                    <a href="http://github.com/Ben-Hu/Kitti-Vision-Benchmark-Project" class="btn btn-default btn-lg">
+                    <a href="//github.com/Ben-Hu/Kitti-Vision-Benchmark-Project" class="btn btn-default btn-lg">
                     <i class="fa fa-car  fa-fw"></i>
                     <span class="network-name">Car & Object Recognition</span></a>
                 </li>
             </ul>
             <ul class="list-inline banner-social-buttons">   
                 <li>
-                    <a href="http://159.203.28.188/la_proto" class="btn btn-default btn-lg">
+                    <a href="//159.203.28.188/la_proto" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
                     <span class="network-name">Lumera's Awakening Dev Builds</span></a>
                 </li>
@@ -162,19 +162,19 @@
             </div>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="https://flicker.com/benjqh" class="btn btn-default btn-lg">
+                    <a href="//flicker.com/benjqh" class="btn btn-default btn-lg">
                     <i class="fa fa-camera-retro fa-fw"></i>
                     <span class="network-name">Flickr</span></a>
                 </li>
                 <li>
-                    <a href="http://last.fm/user/Cresoyt" class="btn btn-default btn-lg">
+                    <a href="//last.fm/user/Cresoyt" class="btn btn-default btn-lg">
                     <i class="fa fa-lastfm fa-fw"></i>
                     <span class="network-name">Last.fm</span></a>
                 </li>
             </ul>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="http://imgur.com/a/GIlpR" class="btn btn-default btn-lg">
+                    <a href="//imgur.com/a/GIlpR" class="btn btn-default btn-lg">
                     <i class="fa fa-umbrella fa-fw"></i>
                     <span class="network-name">Water-Cooled</span></a>
                 </li>
@@ -200,7 +200,7 @@
                 <span class="network-name"></span>benjqh -@- gmail.com</a>
             </li>
             <li>
-                <a href="http://twitter.com/benjqh" class="btn btn-default btn-lg">
+                <a href="//twitter.com/benjqh" class="btn btn-default btn-lg">
                 <i class="fa fa-twitter fa-fw"></i>
                 <span class="network-name">@benjqh</span></a>
             </li>
