--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Ben Hu">
     <meta name="author" content="Ben Hu">
 
@@ -80,7 +80,7 @@
     <!-- ~=~About Section~=~ -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="div-center col-md-8 col-md-offset-2">
                 <h2>about this</h2>
                     <p>Hiya. I'm Ben, a student currently at the University of Toronto finishing up a
                      specialist degree in Computer Science. Take a leisurely scroll through the site and get to know a little bit more about me. 
@@ -101,7 +101,7 @@
     <section id="projects" class="content-section text-center">
             <h2>things i have worked on</h2>
             <div class="row">
-                <div class="col-md-8 col-lg-offset-2">
+                <div class="div-center col-md-8 col-md-offset-2">
                     <p>Here are some of the different projects I've worked on in the past and that am currently working on.</p>
                 </div>
             </div>
@@ -121,26 +121,25 @@
                 <li>
                     <a href="//github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
                     <i class="fa fa-code fa-fw"></i>
-                    <span class="network-name">SynergySpace</span></a>
+                    <span class="network-name">Synergy Space</span></a>
                 </li>
+                <li>
+                    <a href="//github.com/Adjective-Object/simple-term-mockup" class="btn btn-default btn-lg">
+                    <i class="fa fa-terminal  fa-fw"></i>
+                    <span class="network-name">Terminal Velocity</span></a>
+                </li>  
+            </ul>
+            <ul class="list-inline banner-social-buttons">
                 <li>
                     <a href="//github.com/Ben-Hu/Kitti-Vision-Benchmark-Project" class="btn btn-default btn-lg">
                     <i class="fa fa-car  fa-fw"></i>
-                    <span class="network-name">Car & Object Recognition</span></a>
+                    <span class="network-name">Car + Object Recognition</span></a>
                 </li>
-            </ul>
-            <ul class="list-inline banner-social-buttons">   
                 <li>
                     <a href="//159.203.28.188/la_proto" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
                     <span class="network-name">Lumera's Awakening Dev Builds</span></a>
                 </li>
-                <!--
-                <li>
-                    <a class="btn btn-default btn-lg">
-                    <i class="fa fa-terminal  fa-fw"></i>
-                    <span class="network-name">Terminal Velocity</span></a>
-                </li> -->
             </ul>
            <div class="intro-more">
                 <a href="#misc" class="btn btn-default btn-lg page-scroll">
@@ -156,7 +155,7 @@
     <section id="misc" class="content-section text-center">
             <h2>miscellany</h2>
              <div class="row">
-                <div class="col-md-8 col-lg-offset-2">
+                <div class="div-center col-md-8 col-md-offset-2">
                     <p>Outside of the realm of software development : Other stuff I like</p>
                 </div>
             </div>
@@ -176,8 +175,13 @@
                 <li>
                     <a href="//imgur.com/a/GIlpR" class="btn btn-default btn-lg">
                     <i class="fa fa-umbrella fa-fw"></i>
-                    <span class="network-name">Water-Cooled</span></a>
+                    <span class="network-name">Water-Cooled TJ-07</span></a>
                 </li>
+                <!--<li>
+                    <a href="//imgur.com/a/GIlpR" class="btn btn-default btn-lg">
+                    <i class="fa fa-umbrella fa-fw"></i>
+                    <span class="network-name">Water-Cooled Hadron</span></a>
+                </li>-->
             </ul>
             <div class="intro-more">
                 <a href="#contact" class="btn btn-default btn-lg page-scroll">
