--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <span class="network-name">Car + Object Recognition</span></a>
                 </li>
                 <li>
-                    <a href="//159.203.28.188/la_proto" class="btn btn-default btn-lg">
+                    <a href="//lumera.xyz/builds/latest" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
                     <span class="network-name">Lumera's Awakening Dev Builds</span></a>
                 </li>
