--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Ben Hu</title>
 
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/favicon2.png">
     
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -81,18 +81,18 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="div-center col-md-8 col-md-offset-2">
-                <h2>about this</h2>
+                <h2>about me</h2>
                     <p>Hiya. I'm Ben, a student currently at the University of Toronto finishing up a
-                     specialist degree in Computer Science. Take a leisurely scroll through the site and get to know a little bit more about me. 
+                     specialist degree in Computer Science after my wonderful PEY Internship at IBM. Take a leisurely scroll through the site and get to know a little bit more about me. 
                     </p>
-                <div class="intro-more">
+                <!--<div class="intro-more">
                     <a href="#page-top" class="btn btn-default btn-lg page-scroll">
                         <i class="fa fa-angle-double-up animated"></i>
                     </a>
                     <a href="#projects" class="btn btn-default btn-lg page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                     </a>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -136,19 +136,19 @@
                     <span class="network-name">Car + Object Recognition</span></a>
                 </li>
                 <li>
-                    <a href="//159.203.28.188/la_proto" class="btn btn-default btn-lg">
+                    <a href="//lumera.xyz/builds/latest" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
                     <span class="network-name">Lumera's Awakening Dev Builds</span></a>
                 </li>
             </ul>
-           <div class="intro-more">
+            <!--<div class="intro-more">
                 <a href="#about" class="btn btn-default btn-lg page-scroll">
                     <i class="fa fa-angle-double-up animated"></i>
                 </a>
                 <a href="#misc" class="btn btn-default btn-lg page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
-            </div>
+            </div>-->
     </section>
 
     <!-- ~=~Miscellany Section~=~ -->
@@ -156,7 +156,7 @@
             <h2>miscellany</h2>
              <div class="row">
                 <div class="div-center col-md-8 col-md-offset-2">
-                    <p>Outside of the realm of software development : Other stuff I like</p>
+                    <p>Other stuff I like outside of the realm of software development</p>
                 </div>
             </div>
             <ul class="list-inline banner-social-buttons">
@@ -177,20 +177,20 @@
                     <i class="fa fa-umbrella fa-fw"></i>
                     <span class="network-name">Water-Cooled TJ-07</span></a>
                 </li>
-                <!--<li>
-                    <a href="//imgur.com/a/GIlpR" class="btn btn-default btn-lg">
+                <li>
+                    <a href="//imgur.com/a/cgJ8e" class="btn btn-default btn-lg">
                     <i class="fa fa-umbrella fa-fw"></i>
                     <span class="network-name">Water-Cooled Hadron</span></a>
-                </li>-->
+                </li>
             </ul>
-            <div class="intro-more">
+            <!--<div class="intro-more">
                 <a href="#projects" class="btn btn-default btn-lg page-scroll">
                     <i class="fa fa-angle-double-up animated"></i>
                 </a>
                 <a href="#contact" class="btn btn-default btn-lg page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
-            </div>
+            </div>-->
     </section>
    
     <!-- ~=~Contact Section~=~ -->
