--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bh.css" rel="stylesheet">
+    
     <!-- FontAwesome -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -81,7 +82,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="div-center col-md-8 col-md-offset-2">
-                <h2>about me</h2>
+                <h1>about me</h1>
                     <p>Hiya. I'm Ben, a student currently at the University of Toronto finishing up a
                      specialist degree in Computer Science after my wonderful PEY Internship at IBM. Take a leisurely scroll through the site and get to know a little bit more about me. 
                     </p>
@@ -99,10 +100,10 @@
 
     <!-- ~=~Projects Section~=~ -->
     <section id="projects" class="content-section text-center">
-            <h2>things i have worked on</h2>
+            <h1>things i have worked on</h1>
             <div class="row">
                 <div class="div-center col-md-8 col-md-offset-2">
-                    <p>Here are some of the different projects I've worked on in the past and that am currently working on.</p>
+                    <p>Some of the different projects I've worked on in the past and that am currently working on.</p>
                 </div>
             </div>
             <ul class="list-inline banner-social-buttons">
@@ -138,7 +139,7 @@
                 <li>
                     <a href="//lumera.xyz/builds/latest" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
-                    <span class="network-name">Lumera's Awakening Dev Builds</span></a>
+                    <span class="network-name">Lumera:A Game</span></a>
                 </li>
             </ul>
             <!--<div class="intro-more">
@@ -153,15 +154,15 @@
 
     <!-- ~=~Miscellany Section~=~ -->
     <section id="misc" class="content-section text-center">
-            <h2>miscellany</h2>
+            <h1>miscellany</h1>
              <div class="row">
                 <div class="div-center col-md-8 col-md-offset-2">
-                    <p>Other stuff I like outside of the realm of software development</p>
+                    <p>Other stuff I like (to do) outside of the realm of software development</p>
                 </div>
             </div>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="//flicker.com/benjqh" class="btn btn-default btn-lg">
+                    <a href="//flickr.com/benjqh" class="btn btn-default btn-lg">
                     <i class="fa fa-camera-retro fa-fw"></i>
                     <span class="network-name">Flickr</span></a>
                 </li>
@@ -195,7 +196,7 @@
    
     <!-- ~=~Contact Section~=~ -->
     <section id="contact" class="content-section text-center">
-       <h2>contact</h2>
+       <h1>contact</h1>
         <img class="img-circle img-responsive self-image" src="img/self.jpg" height="200" width="200">
         <ul class="list-inline banner-social-buttons">
             <li>
@@ -203,11 +204,11 @@
                 <i class="fa fa-envelope fa-fw"></i>
                 <span class="network-name"></span>benjqh -@- gmail.com</a>
             </li>
-            <li>
+            <!--<li>
                 <a href="//twitter.com/benjqh" class="btn btn-default btn-lg">
                 <i class="fa fa-twitter fa-fw"></i>
                 <span class="network-name">@benjqh</span></a>
-            </li>
+            </li>-->
         </ul>
     </section>
     
