--- a/index.html
+++ b/index.html
@@ -106,40 +106,41 @@
                     <p>Some of the different projects I've worked on in the past and that am currently working on.</p>
                 </div>
             </div>
+
             <ul class="list-inline banner-social-buttons">
                 <li>
                     <a href="//c-programming.onlinelearning.utoronto.ca/index.shtml" class="btn btn-default btn-lg">
                     <i class="fa fa-play-circle-o fa-fw"></i>
-                    <span class="network-name">CSC209 Educational Content</span></a>
+                    <span class="network-name"><h2>CSC209 Content<h2><h3>C education</h3></span></a>
                 </li>
                 <li>
-                    <a href="//mcs.utm.utoronto.ca/~pcrs/computer_org/index.shtml" class="btn btn-default btn-lg">
+                <a href="//mcs.utm.utoronto.ca/~pcrs/computer_org/index.shtml" class="btn btn-default btn-lg">
                     <i class="fa fa-video-camera  fa-fw"></i>
-                    <span class="network-name">CSC258 Educational Content</span></a>
+                    <span class="network-name"><h2>CSC258 Content<h2><h3>comp. org. education</h3></span></a>
                 </li>
             </ul>
             <ul class="list-inline banner-social-buttons">
                 <li>
                     <a href="//github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
                     <i class="fa fa-code fa-fw"></i>
-                    <span class="network-name">Synergy Space</span></a>
+                    <span class="network-name"><h2>Synergy Space</h2><h3>a web app</h3></span></a>
                 </li>
                 <li>
                     <a href="//github.com/Adjective-Object/simple-term-mockup" class="btn btn-default btn-lg">
                     <i class="fa fa-terminal  fa-fw"></i>
-                    <span class="network-name">Terminal Velocity</span></a>
+                    <span class="network-name"><h2>Terminal Velocity</h2><h3>design for a learner's CLI</h3></span></a>
                 </li>  
             </ul>
             <ul class="list-inline banner-social-buttons">
                 <li>
                     <a href="//github.com/Ben-Hu/Kitti-Vision-Benchmark-Project" class="btn btn-default btn-lg">
                     <i class="fa fa-car  fa-fw"></i>
-                    <span class="network-name">Car + Object Recognition</span></a>
+                    <span class="network-name"><h2>Car + Object Recognition</h2><h3>computer vision system</h3></span></a>
                 </li>
                 <li>
                     <a href="//lumera.xyz/builds/latest" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
-                    <span class="network-name">Lumera : A Game</span></a>
+                    <span class="network-name"><h2>Sizis</h2><h3>video game</h3></span></a>
                 </li>
             </ul>
             <!--<div class="intro-more">
