--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <li>
                     <a href="//github.com/Ben-Hu/309-SynSpace" class="btn btn-default btn-lg">
                     <i class="fa fa-code fa-fw"></i>
-                    <span class="network-name"><h2>Synergy Space</h2><h3>a web app</h3></span></a>
+                    <span class="network-name"><h2>Synergy Space</h2><h3>a php web app</h3></span></a>
                 </li>
                 <li>
                     <a href="//github.com/Adjective-Object/simple-term-mockup" class="btn btn-default btn-lg">
@@ -158,7 +158,7 @@
             <h1>miscellany</h1>
              <div class="row">
                 <div class="div-center col-md-8 col-md-offset-2">
-                    <p>Other stuff I like (to do) outside of the realm of software development</p>
+                    <p>Other stuff I like outside of the realm of software development</p>
                 </div>
             </div>
             <ul class="list-inline banner-social-buttons">
