--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <span class="network-name"><h2>Car + Object Recognition</h2><h3>computer vision system</h3></span></a>
                 </li>
                 <li>
-                    <a href="//lumera.xyz" class="btn btn-default btn-lg">
+                    <a href="//ben-hu.com/sizis" class="btn btn-default btn-lg">
                     <i class="fa fa-gamepad  fa-fw"></i>
                     <span class="network-name"><h2>Sizis</h2><h3>video game</h3></span></a>
                 </li>
