--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="//linkedin.com/in/benjhu" class="btn btn-default btn-lg">
+                            <a href="//linkedin.com/in/benjqh" class="btn btn-default btn-lg">
                             <i class="fa fa-linkedin-square fa-fw"></i>
                             <span class="network-name"></span>Linkedin</a>
                         </li>
@@ -83,8 +83,7 @@
         <div class="row">
             <div class="div-center col-md-8 col-md-offset-2">
                 <h1>about me</h1>
-                    <p>Hiya. I'm Ben, a student currently at the University of Toronto finishing up a
-                     specialist degree in Computer Science after my wonderful PEY Internship at IBM. Take a leisurely scroll through the site and get to know a little bit more about me. 
+                    <p>Hiya. I'm Ben, just a software engineer. Take a leisurely scroll through the site and get to know a little bit more about me. 
                     </p>
                 <!--<div class="intro-more">
                     <a href="#page-top" class="btn btn-default btn-lg page-scroll">
