--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Abel|Poiret+One' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Abel|Poiret+One' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -53,29 +53,26 @@
         <div id="intro" class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div id="introsquare" class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">ben hu</h1>
-                        <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="//github.com/Ben-Hu" class="btn btn-default btn-lg">
-                            <i class="fa fa-github fa-fw"></i>
-                            <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="//linkedin.com/in/benjqh" class="btn btn-default btn-lg">
-                            <i class="fa fa-linkedin-square fa-fw"></i>
-                            <span class="network-name"></span>Linkedin</a>
-                        </li>
-                        </ul>
-                        <div class="intro-more">
-                        <a href="#about" class="btn btn-default btn-lg page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                      <h1 class="brand-heading">ben hu</h1>
+                      <ul class="list-inline banner-social-buttons">
+                      <li>
+                          <a href="//github.com/Ben-Hu" class="btn btn-default btn-lg">
+                          <i class="fa fa-github fa-fw"></i>
+                          <span class="network-name">Github</span></a>
+                      </li>
+                      <li>
+                          <a href="//linkedin.com/in/benjqh" class="btn btn-default btn-lg">
+                          <i class="fa fa-linkedin-square fa-fw"></i>
+                          <span class="network-name"></span>Linkedin</a>
+                      </li>
+                      </ul>
+                      <div class="intro-more">
+                      <a href="#about" class="btn btn-default btn-lg page-scroll">
+                          <i class="fa fa-angle-double-down animated"></i>
+                      </a>
+                  </div>
+              </div>
+          </div>
     </header>
 
     <!-- ~=~About Section~=~ -->
@@ -83,7 +80,7 @@
         <div class="row">
             <div class="div-center col-md-8 col-md-offset-2">
                 <h1>about me</h1>
-                    <p>Hiya. I'm Ben, just a software engineer. Take a leisurely scroll through the site and get to know a little bit more about me. 
+                    <p>Hiya. I'm Ben, just a software engineer currently @ <a href="https://validere.com">Validere</a>. Take a leisurely scroll through the site and get to know a little bit more about me. 
                     </p>
                 <!--<div class="intro-more">
                     <a href="#page-top" class="btn btn-default btn-lg page-scroll">
@@ -102,7 +99,7 @@
             <h1>things i have worked on</h1>
             <div class="row">
                 <div class="div-center col-md-8 col-md-offset-2">
-                    <p>Some of the different projects I've worked on in the past and that am currently working on.</p>
+                    <p>Some of the different projects I've worked on in the past.</p>
                 </div>
             </div>
 
@@ -157,7 +154,7 @@
             <h1>miscellany</h1>
              <div class="row">
                 <div class="div-center col-md-8 col-md-offset-2">
-                    <p>Other stuff I like outside of the realm of software development</p>
+                    <p>Other stuff I like outside of the realm of software</p>
                 </div>
             </div>
             <ul class="list-inline banner-social-buttons">
@@ -197,7 +194,7 @@
     <!-- ~=~Contact Section~=~ -->
     <section id="contact" class="content-section text-center">
        <h1>contact</h1>
-        <img class="img-circle img-responsive self-image" src="img/self.jpg" height="200" width="200">
+        <img class="img-circle img-responsive self-image" src="img/headshot.jpg" height="200" width="200">
         <ul class="list-inline banner-social-buttons">
             <li>
                 <a href="mailto:benjqh@gmail.com" class="btn btn-default btn-lg">
